Update Opportunities section with two-column layout

--- a/contact.html
+++ b/contact.html
@@ -133,34 +133,32 @@
         <section class="section section-alt">
             <div class="container">
                 <div class="section-header">
-                    <h2>Opportunities</h2>
-                    <p>Join our research team</p>
+                    <h2>Opportunities at ELION Lab</h2>
                 </div>
 
-                <div class="grid grid-3">
+                <div class="grid grid-2">
                     <div class="card" style="padding: var(--spacing-xl);">
-                        <h3>🎓 Ph.D. Positions</h3>
-                        <p>
-                            We are looking for highly motivated Ph.D. students who are interested in conducting advanced research in Natural Language Processing, including language modeling, hallucination, reasoning, model editing, and multimodality. Join us to pursue research that can make a real impact on the world.
-                        </p>
-                        <a href="mailto:seojae777@konkuk.ac.kr" class="btn btn-outline" style="margin-top: var(--spacing-md);">Apply</a>
+                        <h3>By the time you graduate, you will have the opportunity to:</h3>
+                        <ul style="margin-top: var(--spacing-md); padding-left: var(--spacing-lg); color: var(--text-secondary);">
+                            <li>Publish strong papers at top-tier conferences</li>
+                            <li>Develop clear research presentation and communication skills</li>
+                            <li>Gain experience mentoring junior students</li>
+                            <li>Pursue 1–2 research internships at leading academic or industrial labs</li>
+                            <li>Build visibility in the research community</li>
+                            <li>Acquire hands-on experience in GPU clusters and data center operations</li>
+                        </ul>
                     </div>
 
                     <div class="card" style="padding: var(--spacing-xl);">
-                        <h3>📚 M.S. Positions</h3>
-                        <p>
-                            We are looking for motivated M.S. students who wish to work on practically oriented NLP research, such as language modeling, information retrieval, agent-based AI, and machine learning. Join us to conduct cutting-edge research.
-                        </p>
-                        <a href="mailto:seojae777@konkuk.ac.kr" class="btn btn-outline" style="margin-top: var(--spacing-md);">Apply</a>
-                    </div>
-
-                    <div class="card" style="padding: var(--spacing-xl);">
-                        <h3>💼 Internships</h3>
-                        <p>
-                            We offer research internships for undergraduate and graduate students
-                            during summer and throughout the academic year.
-                        </p>
-                        <a href="mailto:seojae777@konkuk.ac.kr" class="btn btn-outline" style="margin-top: var(--spacing-md);">Apply</a>
+                        <h3>To support your growth and success, ELION Lab emphasizes:</h3>
+                        <ul style="margin-top: var(--spacing-md); padding-left: var(--spacing-lg); color: var(--text-secondary);">
+                            <li>A research-focused environment with minimal non-research overhead</li>
+                            <li>Independent project ownership for all members, including undergraduates</li>
+                            <li>Weekly one-on-one meetings for close mentoring</li>
+                            <li>An open culture that values interaction and discussion</li>
+                            <li>Active encouragement of internal and external collaboration</li>
+                            <li>English as the primary working language</li>
+                        </ul>
                     </div>
                 </div>
             </div>
