Add PhD/MS/Intern positions with unified Apply button

--- a/contact.html
+++ b/contact.html
@@ -161,6 +161,34 @@
                         </ul>
                     </div>
                 </div>
+
+                <div class="grid grid-3" style="margin-top: var(--spacing-xl);">
+                    <div class="card" style="padding: var(--spacing-xl);">
+                        <h3>🎓 Ph.D. Positions</h3>
+                        <p>
+                            We are looking for highly motivated Ph.D. students who are interested in conducting advanced research in Natural Language Processing, including language modeling, hallucination, reasoning, model editing, and multimodality. Join us to pursue research that can make a real impact on the world.
+                        </p>
+                    </div>
+
+                    <div class="card" style="padding: var(--spacing-xl);">
+                        <h3>📚 M.S. Positions</h3>
+                        <p>
+                            We are looking for motivated M.S. students who wish to work on practically oriented NLP research, such as language modeling, information retrieval, agent-based AI, and machine learning. Join us to conduct cutting-edge research.
+                        </p>
+                    </div>
+
+                    <div class="card" style="padding: var(--spacing-xl);">
+                        <h3>💼 Internships</h3>
+                        <p>
+                            We offer research internships for undergraduate and graduate students
+                            during summer and throughout the academic year.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="text-center" style="margin-top: var(--spacing-xl);">
+                    <a href="https://forms.gle/hnbmCB3afuWKgrKD6" target="_blank" class="btn btn-primary">APPLY</a>
+                </div>
             </div>
         </section>
 
