Update positions to 2 boxes: M.S./Ph.D. and Internships

--- a/contact.html
+++ b/contact.html
@@ -162,26 +162,27 @@
                     </div>
                 </div>
 
-                <div class="grid grid-3" style="margin-top: var(--spacing-xl);">
+                <div class="grid grid-2" style="margin-top: var(--spacing-xl);">
                     <div class="card" style="padding: var(--spacing-xl);">
-                        <h3>🎓 Ph.D. Positions</h3>
+                        <h3>🎓 M.S. / Ph.D. Positions</h3>
                         <p>
-                            We are looking for highly motivated Ph.D. students who are interested in conducting advanced research in Natural Language Processing, including language modeling, hallucination, reasoning, model editing, and multimodality. Join us to pursue research that can make a real impact on the world.
+                            We are seeking highly ambitious M.S. and Ph.D. students who want to push the limits of language models and AI systems.
                         </p>
-                    </div>
-
-                    <div class="card" style="padding: var(--spacing-xl);">
-                        <h3>📚 M.S. Positions</h3>
                         <p>
-                            We are looking for motivated M.S. students who wish to work on practically oriented NLP research, such as language modeling, information retrieval, agent-based AI, and machine learning. Join us to conduct cutting-edge research.
+                            At ELION Lab, you will conduct deep, publication-driven research on language intelligence and representation, including reasoning, hallucination, model editing, multimodality, and world models.
+                        </p>
+                        <p>
+                            Students are expected to lead their own research agenda, publish at top-tier venues, and grow into independent researchers through close mentorship and active collaboration.
                         </p>
                     </div>
 
                     <div class="card" style="padding: var(--spacing-xl);">
                         <h3>💼 Internships</h3>
                         <p>
-                            We offer research internships for undergraduate and graduate students
-                            during summer and throughout the academic year.
+                            We offer research-intensive internships for students who are eager to challenge themselves in real NLP and AI research.
+                        </p>
+                        <p>
+                            Interns at ELION Lab work on core research problems, contributing directly to ongoing projects on language models, reasoning, hallucination, and world understanding, with the goal of producing tangible research outcomes.
                         </p>
                     </div>
                 </div>
