--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <section class="section section-alt">
             <div class="container">
                 <div class="section-header">
-                    <h2 style="font-size: 2.5rem;">🔥 NOW HIRING!! 🔥</h2>
+                    <h2 style="font-size: 2.5rem;">NOW HIRING!</h2>
                 </div>
 
                 <div class="card" style="padding: var(--spacing-xl);">
