--- a/contact.html
+++ b/contact.html
@@ -73,9 +73,10 @@
                                 <p>
                                     ELION Lab<br>
                                     Department of Computer Science and Engineering<br>
+                                    Engineering Building A, Konkuk University<br>
                                     120 Neungdong-ro, Gwangjin-gu<br>
                                     Seoul 05029, South Korea<br>
-                                    (서울시 광진구 능동로 120 건국대학교)
+                                    (서울시 광진구 능동로 120 건국대학교 공학관 A동)
                                 </p>
                             </div>
                         </div>
@@ -113,17 +114,15 @@
                     </div>
                     
                     <div class="map-container">
-                        <!-- Replace with actual Google Maps embed or use a placeholder -->
-                        <div style="width: 100%; height: 100%; background: linear-gradient(135deg, var(--bg-tertiary) 0%, var(--border-color) 100%); display: flex; align-items: center; justify-content: center; flex-direction: column; text-align: center; padding: var(--spacing-xl);">
-                            <svg width="64" height="64" viewBox="0 0 24 24" fill="var(--text-light)" style="margin-bottom: var(--spacing-md);">
-                                <path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/>
-                            </svg>
-                            <p style="color: var(--text-secondary); margin: 0;">
-                                <strong>Map Placeholder</strong><br>
-                                Replace with Google Maps embed<br>
-                                or OpenStreetMap
-                            </p>
-                        </div>
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1581.5!2d127.07636!3d37.54194!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357ca4f8a8a8a8a8%3A0x8a8a8a8a8a8a8a8a!2sKonkuk%20University%20Engineering%20Building%20A!5e0!3m2!1sen!2skr!4v1700000000000"
+                            width="100%"
+                            height="100%"
+                            style="border:0; min-height: 400px;"
+                            allowfullscreen=""
+                            loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade">
+                        </iframe>
                     </div>
                 </div>
             </div>
