--- a/team.html
+++ b/team.html
@@ -75,7 +75,7 @@
                     <article class="professor-card">
                         <!-- Basic Info -->
                         <div class="professor-header">
-                            <div class="professor-social-links" style="display: flex; gap: var(--spacing-md); margin-bottom: var(--spacing-sm);">
+                            <div class="professor-social-links" style="display: flex; justify-content: center; gap: var(--spacing-md); margin-bottom: var(--spacing-sm);">
                                 <a href="https://scholar.google.com/citations?user=V8bFAUIAAAAJ&hl=ko" target="_blank" rel="noopener noreferrer" aria-label="Google Scholar" style="color: var(--text-secondary); transition: color 0.3s;">
                                     <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor"><path d="M12 24a7 7 0 1 1 0-14 7 7 0 0 1 0 14zm0-24L0 9.5l4.838 3.94A8 8 0 0 1 12 9a8 8 0 0 1 7.162 4.44L24 9.5z"/></svg>
                                 </a>
