Add CoME Figure image

--- a/publications.html
+++ b/publications.html
@@ -161,14 +161,17 @@
                         <img src="assets/images/publications/find-instruction-fig1.png" alt="Find Instruction Figure" style="width: 280px; max-width: 40%; height: auto; border-radius: var(--radius-md); box-shadow: var(--shadow-sm); flex-shrink: 0;">
                     </div>
 
-                    <div class="publication-item">
-                        <span class="publication-year">NAACL 2025</span>
-                        <h3 class="publication-title">CoME: An Unlearning-based Approach to Conflict-free Model Editing</h3>
-                        <p class="publication-authors">Dahyun Jung, <strong>Jaehyung Seo</strong>, Jaewook Lee, Chanjun Park*, Heuiseok Lim*</p>
-                        <p class="publication-venue">North American Chapter of the ACL (NAACL), 2025</p>
-                        <div class="publication-links">
-                            <a href="https://aclanthology.org/2025.naacl-long.325/" target="_blank">Paper</a>
+                    <div class="publication-item" style="display: flex; gap: var(--spacing-lg); align-items: center;">
+                        <div style="flex: 1; min-width: 0;">
+                            <span class="publication-year">NAACL 2025</span>
+                            <h3 class="publication-title">CoME: An Unlearning-based Approach to Conflict-free Model Editing</h3>
+                            <p class="publication-authors">Dahyun Jung, <strong>Jaehyung Seo</strong>, Jaewook Lee, Chanjun Park*, Heuiseok Lim*</p>
+                            <p class="publication-venue">North American Chapter of the ACL (NAACL), 2025</p>
+                            <div class="publication-links">
+                                <a href="https://aclanthology.org/2025.naacl-long.325/" target="_blank">Paper</a>
+                            </div>
                         </div>
+                        <img src="assets/images/publications/come-fig1.png" alt="CoME Figure" style="width: 280px; max-width: 40%; height: auto; border-radius: var(--radius-md); box-shadow: var(--shadow-sm); flex-shrink: 0;">
                     </div>
 
                     <div class="publication-item" style="display: flex; gap: var(--spacing-lg); align-items: center;">
