Add Figure images to all 2023 publications

--- a/publications.html
+++ b/publications.html
@@ -312,74 +312,95 @@
                 <!-- 2023 Publications -->
                 <h2 style="margin-bottom: var(--spacing-lg);">2023</h2>
                 <div class="card" style="margin-bottom: var(--spacing-2xl);">
-                    <div class="publication-item">
-                        <span class="publication-year">EMNLP 2023</span>
-                        <h3 class="publication-title">🌟 CHEF in the Language Kitchen: A Generative Data Augmentation Leveraging Korean Morpheme Ingredients</h3>
-                        <p class="publication-authors"><strong>Jaehyung Seo</strong>, Hyeonseok Moon, Jaewook Lee, Sugyeong Eo, Chanjun Park, Heuiseok Lim*</p>
-                        <p class="publication-venue">Empirical Methods in Natural Language Processing (EMNLP), 2023</p>
-                        <div class="publication-links">
-                            <a href="https://aclanthology.org/2023.emnlp-main.367/" target="_blank">Paper</a>
+                    <div class="publication-item" style="display: flex; gap: var(--spacing-lg); align-items: center;">
+                        <div style="flex: 1; min-width: 0;">
+                            <span class="publication-year">EMNLP 2023</span>
+                            <h3 class="publication-title">🌟 CHEF in the Language Kitchen: A Generative Data Augmentation Leveraging Korean Morpheme Ingredients</h3>
+                            <p class="publication-authors"><strong>Jaehyung Seo</strong>, Hyeonseok Moon, Jaewook Lee, Sugyeong Eo, Chanjun Park, Heuiseok Lim*</p>
+                            <p class="publication-venue">Empirical Methods in Natural Language Processing (EMNLP), 2023</p>
+                            <div class="publication-links">
+                                <a href="https://aclanthology.org/2023.emnlp-main.367/" target="_blank">Paper</a>
+                            </div>
                         </div>
+                        <img src="assets/images/publications/chef-fig1.png" alt="CHEF Figure" style="width: 280px; max-width: 40%; height: auto; border-radius: var(--radius-md); box-shadow: var(--shadow-sm); flex-shrink: 0;">
                     </div>
 
-                    <div class="publication-item">
-                        <span class="publication-year">EMNLP 2023</span>
-                        <h3 class="publication-title">KEBAP: Korean Error Explainable Benchmark Dataset for ASR and Post-processing</h3>
-                        <p class="publication-authors">Seonmin Koo, Chanjun Park, Jinsung Kim, <strong>Jaehyung Seo</strong>, Sugyeong Eo, Hyeonseok Moon, Heuiseok Lim*</p>
-                        <p class="publication-venue">Empirical Methods in Natural Language Processing (EMNLP), 2023</p>
-                        <div class="publication-links">
-                            <a href="https://aclanthology.org/2023.emnlp-main.292/" target="_blank">Paper</a>
+                    <div class="publication-item" style="display: flex; gap: var(--spacing-lg); align-items: center;">
+                        <div style="flex: 1; min-width: 0;">
+                            <span class="publication-year">EMNLP 2023</span>
+                            <h3 class="publication-title">KEBAP: Korean Error Explainable Benchmark Dataset for ASR and Post-processing</h3>
+                            <p class="publication-authors">Seonmin Koo, Chanjun Park, Jinsung Kim, <strong>Jaehyung Seo</strong>, Sugyeong Eo, Hyeonseok Moon, Heuiseok Lim*</p>
+                            <p class="publication-venue">Empirical Methods in Natural Language Processing (EMNLP), 2023</p>
+                            <div class="publication-links">
+                                <a href="https://aclanthology.org/2023.emnlp-main.292/" target="_blank">Paper</a>
+                            </div>
                         </div>
+                        <img src="assets/images/publications/kebap-fig1.png" alt="KEBAP Figure" style="width: 280px; max-width: 40%; height: auto; border-radius: var(--radius-md); box-shadow: var(--shadow-sm); flex-shrink: 0;">
                     </div>
 
-                    <div class="publication-item">
-                        <span class="publication-year">EMNLP 2023 Findings</span>
-                        <h3 class="publication-title">CReTIHC: Designing Causal Reasoning Tasks about Temporal Interventions and Hallucinated Confoundings</h3>
-                        <p class="publication-authors">Changwoo Chun, SongEun Lee, <strong>Jaehyung Seo</strong>, Heuiseok Lim*</p>
-                        <p class="publication-venue">Empirical Methods in Natural Language Processing (EMNLP) Findings, 2023</p>
-                        <div class="publication-links">
-                            <a href="https://aclanthology.org/2023.findings-emnlp.693/" target="_blank">Paper</a>
+                    <div class="publication-item" style="display: flex; gap: var(--spacing-lg); align-items: center;">
+                        <div style="flex: 1; min-width: 0;">
+                            <span class="publication-year">EMNLP 2023 Findings</span>
+                            <h3 class="publication-title">CReTIHC: Designing Causal Reasoning Tasks about Temporal Interventions and Hallucinated Confoundings</h3>
+                            <p class="publication-authors">Changwoo Chun, SongEun Lee, <strong>Jaehyung Seo</strong>, Heuiseok Lim*</p>
+                            <p class="publication-venue">Empirical Methods in Natural Language Processing (EMNLP) Findings, 2023</p>
+                            <div class="publication-links">
+                                <a href="https://aclanthology.org/2023.findings-emnlp.693/" target="_blank">Paper</a>
+                            </div>
                         </div>
+                        <img src="assets/images/publications/cretihc-fig1.png" alt="CReTIHC Figure" style="width: 280px; max-width: 40%; height: auto; border-radius: var(--radius-md); box-shadow: var(--shadow-sm); flex-shrink: 0;">
                     </div>
 
-                    <div class="publication-item">
-                        <span class="publication-year">Expert Systems with Applications</span>
-                        <h3 class="publication-title">Doubts on the reliability of parallel corpus filtering</h3>
-                        <p class="publication-authors">Hyeonseok Moon, Chanjun Park, Seonmin Koo, Jungseob Lee, Seungjun Lee, <strong>Jaehyung Seo</strong>, Sugyeong Eo, Yoonna Jang, Heuiseok Lim*</p>
-                        <p class="publication-venue">Expert Systems with Applications, 2023</p>
-                        <div class="publication-links">
-                            <a href="https://www.sciencedirect.com/science/article/abs/pii/S0957417423014641" target="_blank">Paper</a>
+                    <div class="publication-item" style="display: flex; gap: var(--spacing-lg); align-items: center;">
+                        <div style="flex: 1; min-width: 0;">
+                            <span class="publication-year">Expert Systems with Applications</span>
+                            <h3 class="publication-title">Doubts on the reliability of parallel corpus filtering</h3>
+                            <p class="publication-authors">Hyeonseok Moon, Chanjun Park, Seonmin Koo, Jungseob Lee, Seungjun Lee, <strong>Jaehyung Seo</strong>, Sugyeong Eo, Yoonna Jang, Heuiseok Lim*</p>
+                            <p class="publication-venue">Expert Systems with Applications, 2023</p>
+                            <div class="publication-links">
+                                <a href="https://www.sciencedirect.com/science/article/abs/pii/S0957417423014641" target="_blank">Paper</a>
+                            </div>
                         </div>
+                        <img src="assets/images/publications/doubts-filtering-fig1.png" alt="Doubts Filtering Figure" style="width: 280px; max-width: 40%; height: auto; border-radius: var(--radius-md); box-shadow: var(--shadow-sm); flex-shrink: 0;">
                     </div>
 
-                    <div class="publication-item">
-                        <span class="publication-year">IJCNLP-AACL 2023</span>
-                        <h3 class="publication-title">Informative Evidence-guided Prompt-based Fine-tuning for English-Korean Critical Error Detection</h3>
-                        <p class="publication-authors">Dahyun Jung, Sugyeong Eo, Chanjun Park, Hyeonseok Moon, <strong>Jaehyung Seo</strong>, Heuiseok Lim*</p>
-                        <p class="publication-venue">International Joint Conference on Natural Language Processing and Conference of the Asia-Pacific Chapter of the ACL (IJCNLP-AACL), 2023</p>
-                        <div class="publication-links">
-                            <a href="https://aclanthology.org/2023.ijcnlp-main.22/" target="_blank">Paper</a>
+                    <div class="publication-item" style="display: flex; gap: var(--spacing-lg); align-items: center;">
+                        <div style="flex: 1; min-width: 0;">
+                            <span class="publication-year">IJCNLP-AACL 2023</span>
+                            <h3 class="publication-title">Informative Evidence-guided Prompt-based Fine-tuning for English-Korean Critical Error Detection</h3>
+                            <p class="publication-authors">Dahyun Jung, Sugyeong Eo, Chanjun Park, Hyeonseok Moon, <strong>Jaehyung Seo</strong>, Heuiseok Lim*</p>
+                            <p class="publication-venue">International Joint Conference on Natural Language Processing and Conference of the Asia-Pacific Chapter of the ACL (IJCNLP-AACL), 2023</p>
+                            <div class="publication-links">
+                                <a href="https://aclanthology.org/2023.ijcnlp-main.22/" target="_blank">Paper</a>
+                            </div>
                         </div>
+                        <img src="assets/images/publications/informative-evidence-fig1.png" alt="Informative Evidence Figure" style="width: 280px; max-width: 40%; height: auto; border-radius: var(--radius-md); box-shadow: var(--shadow-sm); flex-shrink: 0;">
                     </div>
 
-                    <div class="publication-item">
-                        <span class="publication-year">IEEE Access</span>
-                        <h3 class="publication-title">Uncovering the Risks and Drawbacks Associated with the Use of Synthetic Data for Grammatical Error Correction</h3>
-                        <p class="publication-authors">Seonmin Koo, Chanjun Park, Seolhwa Lee, <strong>Jaehyung Seo</strong>, Sugyeong Eo, Hyeonseok Moon, Heuiseok Lim*</p>
-                        <p class="publication-venue">IEEE Access, 2023</p>
-                        <div class="publication-links">
-                            <a href="https://ieeexplore.ieee.org/document/10234394" target="_blank">Paper</a>
+                    <div class="publication-item" style="display: flex; gap: var(--spacing-lg); align-items: center;">
+                        <div style="flex: 1; min-width: 0;">
+                            <span class="publication-year">IEEE Access</span>
+                            <h3 class="publication-title">Uncovering the Risks and Drawbacks Associated with the Use of Synthetic Data for Grammatical Error Correction</h3>
+                            <p class="publication-authors">Seonmin Koo, Chanjun Park, Seolhwa Lee, <strong>Jaehyung Seo</strong>, Sugyeong Eo, Hyeonseok Moon, Heuiseok Lim*</p>
+                            <p class="publication-venue">IEEE Access, 2023</p>
+                            <div class="publication-links">
+                                <a href="https://ieeexplore.ieee.org/document/10234394" target="_blank">Paper</a>
+                            </div>
                         </div>
+                        <img src="assets/images/publications/uncovering-risks-fig1.png" alt="Uncovering Risks Figure" style="width: 280px; max-width: 40%; height: auto; border-radius: var(--radius-md); box-shadow: var(--shadow-sm); flex-shrink: 0;">
                     </div>
 
-                    <div class="publication-item">
-                        <span class="publication-year">ACL 2023 Demo</span>
-                        <h3 class="publication-title">PEEP-Talk: A Situational Dialogue-based Chatbot for English Education</h3>
-                        <p class="publication-authors">Seungjun Lee, Yoonna Jang, Chanjun Park, Jungseob Lee, <strong>Jaehyung Seo</strong>, Hyeonseok Moon, Sugyeong Eo, Seounghoon Lee, Bernardo Yahya, Heuiseok Lim*</p>
-                        <p class="publication-venue">Annual Meeting of the Association for Computational Linguistics (ACL) Demo, 2023</p>
-                        <div class="publication-links">
-                            <a href="https://aclanthology.org/2023.acl-demo.18/" target="_blank">Paper</a>
+                    <div class="publication-item" style="display: flex; gap: var(--spacing-lg); align-items: center;">
+                        <div style="flex: 1; min-width: 0;">
+                            <span class="publication-year">ACL 2023 Demo</span>
+                            <h3 class="publication-title">PEEP-Talk: A Situational Dialogue-based Chatbot for English Education</h3>
+                            <p class="publication-authors">Seungjun Lee, Yoonna Jang, Chanjun Park, Jungseob Lee, <strong>Jaehyung Seo</strong>, Hyeonseok Moon, Sugyeong Eo, Seounghoon Lee, Bernardo Yahya, Heuiseok Lim*</p>
+                            <p class="publication-venue">Annual Meeting of the Association for Computational Linguistics (ACL) Demo, 2023</p>
+                            <div class="publication-links">
+                                <a href="https://aclanthology.org/2023.acl-demo.18/" target="_blank">Paper</a>
+                            </div>
                         </div>
+                        <img src="assets/images/publications/peeptalk-fig1.png" alt="PEEP-Talk Figure" style="width: 280px; max-width: 40%; height: auto; border-radius: var(--radius-md); box-shadow: var(--shadow-sm); flex-shrink: 0;">
                     </div>
                 </div>
 
