Update KommonGen link and add Figure images to all 2021 publications

--- a/publications.html
+++ b/publications.html
@@ -554,54 +554,69 @@
                 <!-- 2021 Publications -->
                 <h2 style="margin-bottom: var(--spacing-lg);">2021</h2>
                 <div class="card">
-                    <div class="publication-item">
-                        <span class="publication-year">HCLT 2021 🏆 Outstanding Paper</span>
-                        <h3 class="publication-title">🌟 KommonGen: A Dataset for Korean Generative Commonsense Reasoning Evaluation</h3>
-                        <p class="publication-authors"><strong>Jaehyung Seo</strong>, Chanjun Park, Hyeonseok Moon, Sugyeong Eo, Myunghoon Kang, Seounghoon Lee, Heuiseok Lim*</p>
-                        <p class="publication-venue">Annual Conference on Human and Cognitive Language Technology (HCLT), 2021</p>
-                        <div class="publication-links">
-                            <a href="https://j-seo.github.io/KommonGen_-A-Dataset-for-Korean-Generative-Commonsense-Reasoning-Evaluation/" target="_blank">Paper</a>
+                    <div class="publication-item" style="display: flex; gap: var(--spacing-lg); align-items: center;">
+                        <div style="flex: 1; min-width: 0;">
+                            <span class="publication-year">HCLT 2021 🏆 Outstanding Paper</span>
+                            <h3 class="publication-title">🌟 KommonGen: A Dataset for Korean Generative Commonsense Reasoning Evaluation</h3>
+                            <p class="publication-authors"><strong>Jaehyung Seo</strong>, Chanjun Park, Hyeonseok Moon, Sugyeong Eo, Myunghoon Kang, Seounghoon Lee, Heuiseok Lim*</p>
+                            <p class="publication-venue">Annual Conference on Human and Cognitive Language Technology (HCLT), 2021</p>
+                            <div class="publication-links">
+                                <a href="https://koreascience.kr/article/CFKO202130060697830.page" target="_blank">Paper</a>
+                            </div>
                         </div>
+                        <img src="assets/images/publications/kommongen-fig1.png" alt="KommonGen Figure" style="width: 280px; max-width: 40%; height: auto; border-radius: var(--radius-md); box-shadow: var(--shadow-sm); flex-shrink: 0;">
                     </div>
 
-                    <div class="publication-item">
-                        <span class="publication-year">WAT 2021</span>
-                        <h3 class="publication-title">BTS: Back TranScription for Speech-to-Text Post-Processor using Text-to-Speech-to-Text</h3>
-                        <p class="publication-authors">Chanjun Park, <strong>Jaehyung Seo</strong>, Seolhwa Lee, Chanhee Lee, Hyeonseok Moon, Sugyeong Eo, Heuiseok Lim*</p>
-                        <p class="publication-venue">Workshop on Asian Translation (WAT), 2021</p>
-                        <div class="publication-links">
-                            <a href="https://aclanthology.org/2021.wat-1.10/" target="_blank">Paper</a>
+                    <div class="publication-item" style="display: flex; gap: var(--spacing-lg); align-items: center;">
+                        <div style="flex: 1; min-width: 0;">
+                            <span class="publication-year">WAT 2021</span>
+                            <h3 class="publication-title">BTS: Back TranScription for Speech-to-Text Post-Processor using Text-to-Speech-to-Text</h3>
+                            <p class="publication-authors">Chanjun Park, <strong>Jaehyung Seo</strong>, Seolhwa Lee, Chanhee Lee, Hyeonseok Moon, Sugyeong Eo, Heuiseok Lim*</p>
+                            <p class="publication-venue">Workshop on Asian Translation (WAT), 2021</p>
+                            <div class="publication-links">
+                                <a href="https://aclanthology.org/2021.wat-1.10/" target="_blank">Paper</a>
+                            </div>
                         </div>
+                        <img src="assets/images/publications/bts-fig1.png" alt="BTS Figure" style="width: 280px; max-width: 40%; height: auto; border-radius: var(--radius-md); box-shadow: var(--shadow-sm); flex-shrink: 0;">
                     </div>
 
-                    <div class="publication-item">
-                        <span class="publication-year">IEEE Access</span>
-                        <h3 class="publication-title">Grounded Vocabulary for Image Retrieval Using a Modified Multi-Generator Generative Adversarial Network</h3>
-                        <p class="publication-authors">Kuekyeng Kim, <strong>Jaehyung Seo</strong>, Heuiseok Lim*</p>
-                        <p class="publication-venue">IEEE Access, 2021</p>
-                        <div class="publication-links">
-                            <a href="https://ieeexplore.ieee.org/document/9585128" target="_blank">Paper</a>
+                    <div class="publication-item" style="display: flex; gap: var(--spacing-lg); align-items: center;">
+                        <div style="flex: 1; min-width: 0;">
+                            <span class="publication-year">IEEE Access</span>
+                            <h3 class="publication-title">Grounded Vocabulary for Image Retrieval Using a Modified Multi-Generator Generative Adversarial Network</h3>
+                            <p class="publication-authors">Kuekyeng Kim, <strong>Jaehyung Seo</strong>, Heuiseok Lim*</p>
+                            <p class="publication-venue">IEEE Access, 2021</p>
+                            <div class="publication-links">
+                                <a href="https://ieeexplore.ieee.org/document/9585128" target="_blank">Paper</a>
+                            </div>
                         </div>
+                        <img src="assets/images/publications/grounded-vocabulary-fig1.png" alt="Grounded Vocabulary Figure" style="width: 280px; max-width: 40%; height: auto; border-radius: var(--radius-md); box-shadow: var(--shadow-sm); flex-shrink: 0;">
                     </div>
 
-                    <div class="publication-item">
-                        <span class="publication-year">IEEE Access</span>
-                        <h3 class="publication-title">An Empirical Study on Automatic Post Editing for Neural Machine Translation</h3>
-                        <p class="publication-authors">Hyeonseok Moon, Chanjun Park, Sugyeong Eo, <strong>Jaehyung Seo</strong>, Heuiseok Lim*</p>
-                        <p class="publication-venue">IEEE Access, 2021</p>
-                        <div class="publication-links">
-                            <a href="https://ieeexplore.ieee.org/document/9528385" target="_blank">Paper</a>
+                    <div class="publication-item" style="display: flex; gap: var(--spacing-lg); align-items: center;">
+                        <div style="flex: 1; min-width: 0;">
+                            <span class="publication-year">IEEE Access</span>
+                            <h3 class="publication-title">An Empirical Study on Automatic Post Editing for Neural Machine Translation</h3>
+                            <p class="publication-authors">Hyeonseok Moon, Chanjun Park, Sugyeong Eo, <strong>Jaehyung Seo</strong>, Heuiseok Lim*</p>
+                            <p class="publication-venue">IEEE Access, 2021</p>
+                            <div class="publication-links">
+                                <a href="https://ieeexplore.ieee.org/document/9528385" target="_blank">Paper</a>
+                            </div>
                         </div>
+                        <img src="assets/images/publications/empirical-study-fig1.png" alt="Empirical Study Figure" style="width: 280px; max-width: 40%; height: auto; border-radius: var(--radius-md); box-shadow: var(--shadow-sm); flex-shrink: 0;">
                     </div>
 
-                    <div class="publication-item">
-                        <span class="publication-year">NeurIPS DCAI Workshop</span>
-                        <h3 class="publication-title">Automatic Knowledge Augmentation for Generative Commonsense Reasoning</h3>
-                        <p class="publication-authors"><strong>Jaehyung Seo</strong>, Chanjun Park, Sugyeong Eo, Hyeonseok Moon, Heuiseok Lim*</p>
-                        <p class="publication-venue">NeurIPS Data-Centric AI Workshop, 2021</p>
-                        <div class="publication-links">
-                            <a href="https://arxiv.org/abs/2111.00192" target="_blank">Paper</a>
+                    <div class="publication-item" style="display: flex; gap: var(--spacing-lg); align-items: center;">
+                        <div style="flex: 1; min-width: 0;">
+                            <span class="publication-year">NeurIPS DCAI Workshop</span>
+                            <h3 class="publication-title">Automatic Knowledge Augmentation for Generative Commonsense Reasoning</h3>
+                            <p class="publication-authors"><strong>Jaehyung Seo</strong>, Chanjun Park, Sugyeong Eo, Hyeonseok Moon, Heuiseok Lim*</p>
+                            <p class="publication-venue">NeurIPS Data-Centric AI Workshop, 2021</p>
+                            <div class="publication-links">
+                                <a href="https://arxiv.org/abs/2111.00192" target="_blank">Paper</a>
+                            </div>
                         </div>
+                        <img src="assets/images/publications/automatic-knowledge-fig1.png" alt="Automatic Knowledge Figure" style="width: 280px; max-width: 40%; height: auto; border-radius: var(--radius-md); box-shadow: var(--shadow-sm); flex-shrink: 0;">
                     </div>
                 </div>
             </div>
